Use custom exception for book validation